fix: aggiunta altezza e overflow alla sezione centrale del carosello

--- a/css/style.css
+++ b/css/style.css
@@ -390,14 +390,16 @@ main .carousel .carousel-left .four {
 main .carousel .carousel-center {
     background-color: #f5f5f5;
     width: calc(100% / 3);
+    height: calc(100vw / 3);
     padding: 70px;
     display: flex;
     flex-grow: 1;
     flex-direction: column;
+    overflow: auto;
 }
 
 main .carousel .carousel-center > * {
-    margin-bottom: 50px;
+    margin-bottom: 50px; 
 }
 
 main .carousel .carousel-center hr {
@@ -407,6 +409,10 @@ main .carousel .carousel-center hr {
 
 main .carousel .carousel-center .carousel-info p:first-of-type {
     margin-bottom: 50px;
+}
+
+main .carousel .carousel-center .carousel-info {
+    
 }
 
 main .carousel .carousel-right {
@@ -430,3 +436,36 @@ main .carousel .carousel-right .seven {
 
 main .carousel .carousel-right .height {
     background-color: #ffd830;
+}
+
+main .free-trial {
+    width: 100%;
+    background-color: #b4d0e7;
+}
+
+main .free-trial .free-trial-inner {
+    padding: 100px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main .free-trial .free-trial-inner .title-trial {
+    width: 50%;
+    color: #61082b;
+}
+
+main .free-trial .free-trial-inner .free-trial-start-button {
+    height: 40px;
+    display: flex;
+}
+
+main .free-trial .free-trial-inner .free-trial-start-button .free-trial-start-btn {
+    padding: 10px 30px;
+    border: none;
+    background-color: white;
+}
+
+main .free-trial .free-trial-inner .free-trial-start-button .free-trial-start-btn:hover {
+    cursor: pointer;
+}
